<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- Geral -->
    <string name="app_name">Smart Fitness</string>
    <string name="action_settings">Settings</string>

    <!-- Login -->
    <string name="login">Login</string>
    <string name="senha">Senha</string>
    <string name="entrar">Entrar</string>

    <!-- Home -->
    <string name="title_activity_home">Home</string>
    <string name="treino">Treino</string>
    <string name="dieta">Dieta</string>
    <string name="aulas">Aulas</string>
    <string name="noticias">Notícias</string>
    <string name="sair">Sair</string>
    <string name="config">Configurações</string>
    <string name="btntreino">btnTreino</string>
    <string name="title_activity_treino">Treino</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_dieta">Dieta</string>
    <string name="title_activity_aulas">Aulas</string>
    <string name="title_activity_noticias">Noticias</string>
    <string name="title_activity_aulas_detalhe">Detalhe da Aula</string>

    <!-- Aulas Detalhes -->
    <string name="descricao">Descrição</string>
    <string name="horarios">Horarios</string>
    <string name="title_activity_noticia_detalhe">Detalhe da Notícia</string>
    <string name="title_activity_form_busca_treino">Formulario de Busca de Treino</string>

    <!-- Busca Treino -->
    <string name="duracao_treino">Duração do treino</string>
    <string name="dias_semana">Quantidade de dias na semana</string>
    <string name="objetivo">Objetivo</string>
    <string name="faixa_etaria">Faixa etaria</string>
    <string name="sexo">Sexo</string>
    <string name="buscar">Buscar</string>
    <string name="title_activity_form_solicitacao">Formulario de Solicitação</string>

    <!-- Solicitacao -->
    <string name="enviar">Enviar</string>
    <string name="title_activity_list_busca_treino">Resultado da busca</string>
    <string name="title_activity_detalhe_busca_treino">Detalhe do Treino</string>

    <!-- detalhe Treino -->
    <string name="adcionar_treino">Adcionar treino aos Meus Treinos</string>
    <string name="data">Data</string>
    <string name="professor">Professor</string>
    <string name="title_activity_treino_exercicios_parte_corpo">Partes do Corpo</string>
    <string name="title_activity_treino_exercicios_list">Exercicios</string>
    <string name="title_activity_treino_exercicio_detalhe">Exercicio Detalhe</string>
    
    <!-- Detalhe exercicio -->
    <string name="musculos_primarios">Musculos Primarios</string>
	<string name="musculos_secundarios">Musculos Secundarios</string>
</resources>
