<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/back"
    tools:context=".FormBuscaTreinoActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sexo" />

    <Spinner
        android:id="@+idFormBuscaTreino/sexoSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/sexo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faixa_etaria" />

    <Spinner
        android:id="@+idFormBuscaTreino/faixaSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/faixa_etaria"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/objetivo" />

    <Spinner
        android:id="@+idFormBuscaTreino/objetivoSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/objetivo" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dias_semana" />

    <Spinner
        android:id="@+idFormBuscaTreino/diasSemanaSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/dias_semana"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/duracao_treino" />

    <Spinner
        android:id="@+idFormBuscaTreino/duracaoSpinner"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/duracao_treino" />

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/buscar" 
        android:onClick="buscarTreino"/>

</LinearLayout>