<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
   	android:orientation="vertical"
   	android:background="@drawable/back"
    tools:context=".LoginActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login" />
    
    <EditText
        android:id="@+idLogin/login" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/senha" />
    
    <EditText
        android:id="@+idLogin/senha" 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"/>
    
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" 
        android:text="@string/entrar"
        android:onClick="logar"
        />

</LinearLayout>
